# dallama

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  convert_to_rec.py  curl.txt  foo.csv  main.py  model.py  overview.csv  overview_1.csv  pre-commit-config.yaml  prompt.md  pyproject.toml  remote_script.py  requirements.txt  result_overview.csv  script.py  some_data.csv  spell_check.py  test.csv  test.py  transposed.csv
archived/: arc.csv  foo.csv  tips.csv  utils.py
dalama/: __main__.py  model.py  spell_check.py
dallama/: __init__.py  __main__.py  dallama.py  database.py  db.db  delete.py  evaluate.py  foo.csv  model.py  ollama_utils.py  prompt.py  results.csv  runner.py  spell_check.py  test.py
data/: copy.csv  copy2.csv
database/: class_diagram.md  create_db.py
docs/: erd_diagram.md
llama_farm/: __main__.py
modelfiles/: llama2:13b_right-manager  llama2:7b_laminated-chit  llama2:7b_undecidable-centerline  llama:7b_spry-locus  mistral:7b-text-fp16_light-capacitor  mistral:7b-text-fp16_open-timer  mistral:7b_ambitious-bud  nous-hermes:13b_loud-engineer  vicuna:13b_tiny-luminosity  vicuna:7b_pure-speed  vicuna:7b_silly-gator
results/: llama2:13b.txt  llama2:7b.txt  mistral-openorca:7b.txt  mistral:7b.txt  nous-hermes:13b.txt  nous-hermes:7b.txt  vicuna:13b.txt  vicuna:7b.txt  wizard-vicuna-uncensored:13b.txt  wizard-vicuna-uncensored:7b.txt
streamlit/: app.py
tests/: overview.csv  test_dalama.py  test_dallama.py  test_db_creation.py  test_lang_tool.py  test_model_creation.py  test_prompt_creation.py  test_prompts.py  testing_fixutes.py
tmp/: 161c39d3-c143-41b2-9135-38032092dae6  2ffeefb9-8204-4391-940a-632d55e8b6d0  (+3 more)
(+2 files in other folders)
