[tool.poetry]
name = "dalama"
version = "0.1.0"
description = ""
authors = ["Niklas Alexander Shern <nashern@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.0.3"
randomname = "^0.2.1"

[tool.poetry.group.DEV.dependencies]
bpython = "^0.24"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
bandit = "^1.7.5"
safety = "^2.3.5"

[tool.poetry.scripts]
dalama = 'dalama.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [tool.ruff]
# # Enable the isort rules.
# extend-select = ["I"]
