[tool.poetry]
name = "dallama"
version = "0.1.0"
description = ""
authors = ["Niklas Alexander Shern <nashern@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
pandas = "^2.1.2"
requests = "^2.31.0"
tqdm = "^4.66.1"
langdetect = "^1.0.9"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
