[tool.poetry]
name = "dallama"
version = "0.3.0"
description = ""
authors = ["Niklas Alexander Shern <nashern@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1,<3.13"
pandas = "^2.1.2"
requests = "^2.31.0"
tqdm = "^4.66.1"
langdetect = "^1.0.9"
nltk = "^3.8.1"
phunspell = "^0.1.6"
plotly = "^5.18.0"
pytest = "^7.4.3"
langchain = "^0.0.350"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dallama = "dallama.__main__:main"
